src/app/widgets/Visualizer/machine-status-area.styl
.control-area {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1.5rem;
    position: absolute;
    top: 20px;
    right: 20px;
    left: 20px;
    pointer-events: none;
}

.cameraControl {
    width: 50%;
    height: 50%;
}

.camera-img {
    width: 50px;
    padding: 5px;
    border-radius: 10px;

    &:focus {
        outline: none;
    }
}

.camera-control-active {
    background-color: lighten(#059669, 10%);
}

.camera-control {
    display: grid;
    align-self: flex-start;
    grid-template-columns: 33% 33% 34%;
    grid-gap: 5px;
    max-width: 160px;
    border-radius: 10px;
}

.machine-info {
    p {
        text-align: right;
        color: white;
        word-break: break-all;
        font-size: clamp(.8rem, 1vw, 1.6rem);
    }
}

.machine-status-message {
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: flex-start;
    justify-self: center;
    font-size: clamp(1rem, 1.15vw, 2rem);
    height: calc(var(--vh, 1vh) * 10);
    max-height: 70px
    border-radius: 5px;
    width: 100%;
    max-width: 255px;
}

.machine-status-wrapper {
    display: grid;
    row-gap: 10px;
}

.machine-status-unlock {
    primary = rgb(0, 255, 0);
    outline: none;
    cursor: pointer;
    justify-self: center;
    font-size: clamp(2rem, 2.5vw, 3.5rem);
    color: rgba(primary, 0.6);
    transition: color 350ms ease-in-out

    &:hover {
        color: rgb(primary);
    }
}

.machine {
    status-mixin(bgColor, textColor){
        @extend .machine-status-message;

        background-color: rgba(bgColor, 0.6);
        color: rgba(textColor, 0.8);
        pointer-events: none
        z-index: 10000;
    }

    &-Disconnected {
        bgColor = grey;
        color = white;
        status-mixin(bgColor, color)
    }

    &-Idle {
        bgColor = white;
        color = black;
        status-mixin(bgColor, color)
    }

    &-Alarm {
        bgColor = rgb(255, 0, 0);
        color = rgb(255, 255, 255);
        status-mixin(bgColor, color)
        i {
            font-size: 5rem !important;
        }
    }

    &-Run {
        bgColor = rgb(5,150,105);
        color = rgb(255, 255, 255);
        status-mixin(bgColor, color)
    }

    &-Hold {
        bgColor = rgb(217, 119, 6);
        color = rgb(255, 255, 255, 0.8);
        status-mixin(bgColor, color)
    }

    &-Jog {
        bgColor = rgb(6,184,129);
        color = rgb(255, 255, 255);
        status-mixin(bgColor, color);
    }
}

.big-text {
    font-size: 5rem !important
    color: #06b881
}

.unlock-machine {
    color: #3e85c7;
    font-weight bold;
    font-size: 1.2rem;
}

